--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^2.1.3",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
