--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "millionaire-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/igorsharay/millionaire-game",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +12,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "gh-pages": "^6.0.0",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -20,13 +23,49 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "prepare": "husky install"
   },
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "project": "./tsconfig.json"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "airbnb",
+      "airbnb-typescript"
+    ],
+    "plugins": [
+      "react"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "src/**/*Slice.ts"
+        ],
+        "rules": {
+          "no-param-reassign": [
+            "error",
+            {
+              "props": false
+            }
+          ]
+        }
+      }
     ]
   },
   "browserslist": {
@@ -40,5 +79,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "npm run lint"
   }
 }
