--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "millionaire-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/igorsharay/millionaire-game",
+  "homepage": "https://igorsharay.github.io/millionaire-game",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
